--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
             </div>
         </nav>
+        <!-- 16:9 aspect ratio -->
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vSodz71rS7Q?rel=0&amp;controls=0&amp;showinfo=0" ></iframe>
+        </div>
             <div class="container">
                  <div class="jumbotron">
                     <h1>Пробна страница ПОМЕЛО</h1>
