--- a/index.html
+++ b/index.html
@@ -17,40 +17,58 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                  <a class="navbar-brand" href="#">Стоте</a>
-                </div>
-                <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Начало</a></li>
-                  <li><a href="#">Области</a></li>
-                  <li><a href="#">Карта</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                  <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                </ul>
 
-            </div>
-        </nav>
+            <!-- Fixed navbar -->
+            <nav class="navbar navbar-default navbar-fixed-top">
+              <div class="container">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="#">Project name</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                  <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li class="dropdown-header">Nav header</li>
+                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">One more separated link</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                  <ul class="nav navbar-nav navbar-right">
+                    <li><a href="../navbar/">Default</a></li>
+                    <li><a href="../navbar-static-top/">Static top</a></li>
+                    <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+                  </ul>
+                </div><!--/.nav-collapse -->
+              </div>
+            </nav>
         <!-- 16:9 aspect ratio -->
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vSodz71rS7Q?rel=0&amp;controls=0&amp;showinfo=0" ></iframe>
         </div>
-            <div class="container">
-                 <div class="jumbotron">
-                    <h1>Пробна страница ПОМЕЛО</h1>
 
+        <div class="row">
+          <div  class="col-md-4" style="color:black;background:white;">
 
-
-
-                  </div>
-                  <p>This is some text.</p>
-                  <p>This is another text.</p>
-
-            </div>
-
+              .col-md-4
+          </div>
+          <div class="alert alert-dismissible alert-success col-md-4">.col-md-4</div>
+          <div class="alert alert-dismissible alert-danger col-md-4">.col-md-4</div>
+        </div>
 
 
     </body>
