add font and other stuf

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Стоте</title>
+        <link rel="stylesheet" type="text/css" href="custom.css">
+
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -14,6 +16,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Ledger" rel="stylesheet">
     </head>
 
     <body>
@@ -28,30 +31,27 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="#">Project name</a>
+                  <a class="navbar-brand" href="#">Стоте</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li ><a class="glyphicon glyphicon-map-marker" href="#">Карта</a></li>
+                    <li><a class="glyphicon glyphicon-list" href="#about">Анкета</a></li>
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                      <a class="glyphicon glyphicon-leaf" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Области <span class="caret"></span></a>
                       <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                         <li><a href="#">Something else here</a></li>
                         <li role="separator" class="divider"></li>
-                        <li class="dropdown-header">Nav header</li>
-                        <li><a href="#">Separated link</a></li>
-                        <li><a href="#">One more separated link</a></li>
+                        <li><a href="#">София</a></li>
                       </ul>
                     </li>
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
-                    <li><a href="../navbar/">Default</a></li>
-                    <li><a href="../navbar-static-top/">Static top</a></li>
-                    <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+                    <li><a class="btn btn-danger" style="color:black;background:white;" href="">facebook</a></li>
+                    <li><a class="btn btn-success" href="">twitter</a></li>
+                    <li><a class="btn btn-danger" href="https://github.com/Nahalius/stote">github</a></li>
                   </ul>
                 </div><!--/.nav-collapse -->
               </div>
@@ -60,15 +60,26 @@
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vSodz71rS7Q?rel=0&amp;controls=0&amp;showinfo=0" ></iframe>
         </div>
+        <div class="jumbotron" >
+          <h1>100-те туристически обекта на България</h1>
+          <p>„Опознай България – 100 национални туристически обекта“ е българско национално туристическо движение, възникнало през 1966 г.</p>
+          <p>Целта на движението е да насърчи туристите да се запознаят с някои от най-значимите туристически обекти в България. Сред обектите
+              на движението са културни, исторически, географски, археологически, архитектурни паметници със световно, национално и регионално
+              значение. Те включват най-забележителните природни феномени в страната, исторически местности, архитектурни резервати, храмове и
+              манастири, най-високите планински върхове, даващи цялостна картина на богатото културно-историческо и приридно наследство по българските
+              земи от дълбока древност до наши дни</p>
+          <p><a class="btn btn-success btn-lg" href="#" role="button">Попълни Анкетата</a></p>
+          <div class="row">
+            <div  class="alert alert-dismissible alert-success col-md-4" style="color:black;background:white;">
 
-        <div class="row">
-          <div  class="col-md-4" style="color:black;background:white;">
-
-              .col-md-4
+                .col-md-4
+            </div>
+            <div class="alert alert-dismissible alert-success col-md-4">.col-md-4</div>
+            <div class="alert alert-dismissible alert-danger col-md-4">.col-md-4</div>
           </div>
-          <div class="alert alert-dismissible alert-success col-md-4">.col-md-4</div>
-          <div class="alert alert-dismissible alert-danger col-md-4">.col-md-4</div>
         </div>
+
+
 
 
     </body>
