--- a/index.html
+++ b/index.html
@@ -71,11 +71,46 @@
           <p><a class="btn btn-success btn-lg" href="#" role="button">Попълни Анкетата</a></p>
           <div class="row">
             <div  class="alert alert-dismissible alert-success col-md-4" style="color:black;background:white;">
+                <h2 >Северозападен район</h2>
+                <h3>Видин</h3>
+                <h3>Монтана</h3>
+                <h3>Враца</h3>
+                <h3>Ловеч</h3>
+                <h3>Плевен</h3>
+                <h2>Северен централен район</h2>
+                <h3>Велико Търново</h3>
+                <h3>Габрово</h3>
+                <h3>Русе</h3>
+                <h3>Силистра</h3>
+                <h3>Разград</h3>
 
-                .col-md-4
             </div>
-            <div class="alert alert-dismissible alert-success col-md-4">.col-md-4</div>
-            <div class="alert alert-dismissible alert-danger col-md-4">.col-md-4</div>
+            <div class="alert alert-dismissible alert-success col-md-4">
+                <h2>Североизточен район</h2>
+                <h3>Варна</h3>
+                <h3>Добрич</h3>
+                <h3>Търговище</h3>
+                <h3>Шумен</h3>
+                <h2>Югоизточен район</h2>
+                <h3>Бургас</h3>
+                <h3>Сливен</h3>
+                <h3>Стара Загора</h3>
+                <h3>Ямбол</h3>
+            </div>
+            <div class="alert alert-dismissible alert-danger col-md-4">
+                <h2>Южен централен район</h2>
+                Пловдив
+                Пазарджик
+                Смолян
+                Хасково
+                Кърджали.
+                <h2>Югозападен район</h2>
+                София
+                Софийска област
+                Перник
+                Кюстендил
+                Благоевград
+            </div>
           </div>
         </div>
 
