--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-
+        <header>
             <!-- Fixed navbar -->
             <nav class="navbar navbar-default navbar-fixed-top">
               <div class="container">
@@ -63,19 +63,31 @@
             <br>
             <br>
         <!-- 16:9 aspect ratio -->
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vSodz71rS7Q?rel=0&amp;controls=0&amp;showinfo=0" ></iframe>
-        </div>
-        <div class="jumbotron" >
-          <h1>100-те туристически обекта на България</h1>
-          <p>„Опознай България – 100 национални туристически обекта“ е българско национално туристическо движение, възникнало през 1966.</p>
-          <p>Целта на движението е да насърчи туристите да се запознаят с някои от най-значимите туристически обекти в България. Сред обектите
+
+        <section class="home">
+          <div>
+            <h1>100-те туристически обекта на България</h1>
+            <p>Опознай чудесата на България!</p>
+            <p><a class="btn btn-success btn-lg" href="#" role="button">Научи повече</a></p>
+          </div>
+        </section>
+
+      </header>
+        <section class="video">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vSodz71rS7Q?rel=0&amp;controls=0&amp;showinfo=0" ></iframe>
+          </div>
+          <div class="jumbotron" >
+            <h1>100-те туристически обекта на България</h1>
+            <p>„Опознай България – 100 национални туристически обекта“ е българско национално туристическо движение, възникнало през 1966.</p>
+            <p>Целта на движението е да насърчи туристите да се запознаят с някои от най-значимите туристически обекти в България. Сред обектите
               на движението са културни, исторически, географски, археологически, архитектурни паметници със световно, национално и регионално
               значение. Те включват най-забележителните природни феномени в страната, исторически местности, архитектурни резервати, храмове и
               манастири, най-високите планински върхове, даващи цялостна картина на богатото културно-историческо и приридно наследство по българските
               земи от дълбока древност до наши дни</p>
-          <br>
-          <p><a class="btn btn-success btn-lg" href="#" role="button">Попълни Анкетата</a></p>
+            <br>
+            <p><a class="btn btn-success btn-lg" href="#" role="button">Попълни Анкетата</a></p>
+        </section>
 
           <hr>
           <h1>Стоте Национални Туристически Обекта</h1>
