responsive design, footer added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <body>
       <div id="wrapper">
 
-
         <header>
             <!-- Fixed navbar -->
             <nav class="navbar navbar-default navbar-fixed-top">
@@ -95,10 +94,13 @@
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vSodz71rS7Q?rel=0&amp;controls=0&amp;showinfo=0"></iframe>
         </div>
+
+        <div class="heading">
           <hr>
           <h1>Стоте Национални Туристически Обекта</h1>
           <p>*Подредени по региони и области.</p>
-          <hr>
+          <hr/>
+        </div>
 
         <section class="sever-zapad">
             <div class="row">
@@ -109,7 +111,7 @@
                 </header>
                     <div class="objects">
 
-                      <div id = "lovech" class="col-md-2 col-sm-6">
+                      <div id = "lovech" class="col-md-2 col-sm-12">
                           <h3>Ловеч</h3>
                             <ul>
                                 <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%9C%D1%83%D0%B7%D0%B5%D0%B9_%E2%80%9E%D0%92%D0%B0%D1%81%D0%B8%D0%BB_%D0%9B%D0%B5%D0%B2%D1%81%D0%BA%D0%B8%E2%80%9C_(%D0%9B%D0%BE%D0%B2%D0%B5%D1%87)" title="Музей „Васил Левски“ (Ловеч)">Музей „Васил Левски“</a></li>
@@ -123,7 +125,7 @@
                             </ul>
                         </div>
 
-                      <div id = "vidin" class="col-md-2 col-sm-6">
+                      <div id = "vidin" class="col-md-2 col-sm-12">
                           <h3>Видин</h3>
                           <ul>
                             <li><a href="https://bg.wikipedia.org/wiki/%D0%91%D0%B0%D0%B1%D0%B0_%D0%92%D0%B8%D0%B4%D0%B0" title="Баба Вида">Музей-крепост „Баба Вида“</a></li>
@@ -135,7 +137,7 @@
                           </ul>
                         </div>
 
-                      <div id = "vratsa" class="col-md-2 col-sm-6">
+                      <div id = "vratsa" class="col-md-2 col-sm-12">
                         <h3>Враца</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%9B%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%BA%D0%B0" title="Леденика">Пещера Леденика</a></li>
@@ -146,7 +148,7 @@
                         </ul>
                       </div>
 
-                      <div id = "pleven" class="col-md-2 col-sm-6">
+                      <div id = "pleven" class="col-md-2 col-sm-12">
                         <h3>Плевен</h3>
                           <ul>
                               <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%A1%D0%B2%D0%B5%D1%82%D0%B8_%D0%93%D0%B5%D0%BE%D1%80%D0%B3%D0%B8_(%D0%9F%D0%BB%D0%B5%D0%B2%D0%B5%D0%BD)" title="Свети Георги (Плевен)">Мавзолей-параклис „Св.Георги Победоносец“</a></li>
@@ -155,7 +157,7 @@
                           </ul>
                       </div>
 
-                      <div id = "montana" class="col-md-2 col-sm-6">
+                      <div id = "montana" class="col-md-2 col-sm-12">
                           <h3>Монтана</h3>
                             <ul>
                                 <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%95%D1%82%D0%BD%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D1%81%D0%BA%D0%B8_%D0%BC%D1%83%D0%B7%D0%B5%D0%B9_(%D0%91%D0%B5%D1%80%D0%BA%D0%BE%D0%B2%D0%B8%D1%86%D0%B0)" title="Етнографски музей (Берковица)">Етнографски музей</a></li>
@@ -179,7 +181,7 @@
               </header>
 
               <div class="objects">
-                  <div id = "veliko-tarnovo" class="col-md-2 col-sm-6">
+                  <div id = "veliko-tarnovo" class="col-md-2 col-sm-12">
                     <h3>Велико Търново</h3>
                           <ul>
                               <li><a href="https://bg.wikipedia.org/wiki/%D0%A6%D0%B0%D1%80%D0%B5%D0%B2%D0%B5%D1%86" title="Царевец">Архитектурно-исторически резерват „Царевец“</a></li>
@@ -191,7 +193,7 @@
                           </ul>
                   </div>
 
-                  <div id = "gabrovo" class="col-md-2 col-sm-6">
+                  <div id = "gabrovo" class="col-md-2 col-sm-12">
                       <h3>Габрово</h3>
                               <ul>
                                   <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%95%D1%82%D1%8A%D1%80_(%D0%BC%D1%83%D0%B7%D0%B5%D0%B9)" title="Етър (музей)">Етнографски музей на открито „Етъра“</a></li>
@@ -206,7 +208,7 @@
                             </ul>
                   </div>
 
-                  <div id = "ruse" class="col-md-2 col-sm-6">
+                  <div id = "ruse" class="col-md-2 col-sm-12">
                           <h3>Русе</h3>
                           <ul>
                               <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%9A%D1%8A%D1%89%D0%B0-%D0%BC%D1%83%D0%B7%D0%B5%D0%B9_%E2%80%9E%D0%97%D0%B0%D1%85%D0%B0%D1%80%D0%B8%D0%B9_%D0%A1%D1%82%D0%BE%D1%8F%D0%BD%D0%BE%D0%B2%E2%80%9C" title="Къща-музей „Захарий Стоянов“">Къща-музей „Захарий Стоянов“</a></li>
@@ -218,7 +220,7 @@
                         </ul>
                       </div>
 
-                  <div id = "silistra" class="col-md-2 col-sm-6">
+                  <div id = "silistra" class="col-md-2 col-sm-12">
                   <h3>Силистра</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%A0%D0%B5%D0%B3%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D0%B5%D0%BD_%D0%B8%D1%81%D1%82%D0%BE%D1%80%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8_%D0%BC%D1%83%D0%B7%D0%B5%D0%B9,_%D0%A1%D0%B8%D0%BB%D0%B8%D1%81%D1%82%D1%80%D0%B0"class="mw-redirect" title="Регионален исторически музей, Силистра">Исторически музей</a></li>
@@ -228,7 +230,7 @@
                         </ul>
                 </div>
 
-                  <div id = "razgrad" class="col-md-2 col-sm-6">
+                  <div id = "razgrad" class="col-md-2 col-sm-12">
                     <h3>Разград</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%90%D0%B1%D1%80%D0%B8%D1%82%D1%83%D1%81" title="Абритус">Археологически резерват „Абритус“</a></li>
@@ -251,7 +253,7 @@
                   <img src="assets\sever-iztok.png" alt=""/>
                 </header>
                 <div class="objects">
-                  <div id = "varna" class="col-md-2 col-sm-6">
+                  <div id = "varna" class="col-md-2 col-sm-12">
                       <h3>Варна</h3>
                             <ul>
                                 <li><a href="https://bg.wikipedia.org/wiki/%D0%92%D0%B0%D1%80%D0%BD%D0%B5%D0%BD%D1%81%D0%BA%D0%B8_%D0%B0%D1%80%D1%85%D0%B5%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8_%D0%BC%D1%83%D0%B7%D0%B5%D0%B9" title="Варненски археологически музей">Регионален исторически музей</a></li>
@@ -260,7 +262,7 @@
                             </ul>
                 </div>
 
-                  <div id = "dobrich" class="col-md-2 col-sm-6">
+                  <div id = "dobrich" class="col-md-2 col-sm-12">
                       <h3>Добрич</h3>
                             <ul>
                                 <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%94%D0%BE%D0%BC-%D0%BF%D0%B0%D0%BC%D0%B5%D1%82%D0%BD%D0%B8%D0%BA_%E2%80%9E%D0%99%D0%BE%D1%80%D0%B4%D0%B0%D0%BD_%D0%99%D0%BE%D0%B2%D0%BA%D0%BE%D0%B2%E2%80%9C" title="Дом-паметник „Йордан Йовков“">Дом-паметник „Йордан Йовков“</a></li>
@@ -272,7 +274,7 @@
                             </ul>
                   </div>
 
-                  <div id = "targovishte" class="col-md-2 col-sm-6">
+                  <div id = "targovishte" class="col-md-2 col-sm-12">
                       <h3>Търговище</h3>
                             <ul>
                                 <li>Славейковото училище</li>
@@ -280,7 +282,7 @@
                             </ul>
                   </div>
 
-                  <div id = "shumen" class="col-md-2 col-sm-6">
+                  <div id = "shumen" class="col-md-2 col-sm-12">
                       <h3>Шумен</h3>
                             <ul>
                                 <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%A1%D1%8A%D0%B7%D0%B4%D0%B0%D1%82%D0%B5%D0%BB%D0%B8_%D0%BD%D0%B0_%D0%B1%D1%8A%D0%BB%D0%B3%D0%B0%D1%80%D1%81%D0%BA%D0%B0%D1%82%D0%B0_%D0%B4%D1%8A%D1%80%D0%B6%D0%B0%D0%B2%D0%B0" title="Създатели на българската държава">„Паметник 1300години България“</a></li>
@@ -304,7 +306,7 @@
                       <img src="assets\iug-iztok.png" alt=""/>
                     </header>
                     <div class="objects">
-                      <div id = "burgas" class="col-md-3 col-sm-6">
+                      <div id = "burgas" class="col-md-3 col-sm-12">
                       <h3>Бургас</h3>
                         <ul>
                             <li><a href="https://bg.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B5%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8_%D0%BC%D1%83%D0%B7%D0%B5%D0%B9,_%D0%9D%D0%B5%D1%81%D0%B5%D0%B1%D1%8A%D1%80" title="Археологически музей, Несебър">Архитектурно-исторически резерват</a></li>
@@ -319,7 +321,7 @@
                         </ul>
                     </div>
 
-                      <div id = "sliven" class="col-md-3 col-sm-6">
+                      <div id = "sliven" class="col-md-3 col-sm-12">
                       <h3>Сливен</h3>
                         <ul>
                             <li>Къща-музей „Хаджи Димитър“</li>
@@ -332,7 +334,7 @@
                         </ul>
                     </div>
 
-                      <div id = "stara-zagora" class="col-md-3 col-sm-6">
+                      <div id = "stara-zagora" class="col-md-3 col-sm-12">
                       <h3>Стара Загора</h3>
                         <ul>
                             <li><a target="_blank"  href="https://bg.wikipedia.org/wiki/%D0%9A%D1%8A%D1%89%D0%B0-%D0%BC%D1%83%D0%B7%D0%B5%D0%B9_%E2%80%9E%D0%9F%D0%B5%D0%B9%D0%BE_%D0%AF%D0%B2%D0%BE%D1%80%D0%BE%D0%B2%E2%80%9C" title="Къща-музей „Пейо Яворов“">Къща-музей „Пейо Яворов“</a></li>
@@ -351,7 +353,7 @@
                         </ul>
                     </div>
 
-                      <div id = "yambol" class="col-md-3 col-sm-6">
+                      <div id = "yambol" class="col-md-3 col-sm-12">
                       <h3>Ямбол</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%9A%D0%B0%D0%B1%D0%B8%D0%BB%D0%B5_(%D0%B4%D1%80%D0%B5%D0%B2%D0%B5%D0%BD_%D0%B3%D1%80%D0%B0%D0%B4)" title="Кабиле (древен град)">Античен град „Кабиле“</a></li>
@@ -372,7 +374,7 @@
                       <img src="assets\iug-centralen.png" alt=""/>
                     </header>
                     <div class="objects">
-                      <div id = "plovdiv" class="col-md-2 col-sm-6">
+                      <div id = "plovdiv" class="col-md-2 col-sm-12">
                       <h3>Пловдив</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%A0%D0%B5%D0%B3%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D0%B5%D0%BD_%D0%B8%D1%81%D1%82%D0%BE%D1%80%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8_%D0%BC%D1%83%D0%B7%D0%B5%D0%B9,_%D0%9F%D0%BB%D0%BE%D0%B2%D0%B4%D0%B8%D0%B2" class="mw-redirect" title="Регионален исторически музей, Пловдив">Исторически музей</a></li>
@@ -393,7 +395,7 @@
                         </ul>
                     </div>
 
-                      <div id = "pazardjik" class="col-md-2 col-sm-6">
+                      <div id = "pazardjik" class="col-md-2 col-sm-12">
                       <h3>Пазарджик</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%9A%D1%8A%D1%89%D0%B0-%D0%BC%D1%83%D0%B7%D0%B5%D0%B9_%E2%80%9E%D0%A1%D1%82%D0%B0%D0%BD%D0%B8%D1%81%D0%BB%D0%B0%D0%B2_%D0%94%D0%BE%D1%81%D0%BF%D0%B5%D0%B2%D1%81%D0%BA%D0%B8%E2%80%9C" title="Къща-музей „Станислав Доспевски“">Къща-музей „Станислав Доспевски“</a></li>
@@ -410,7 +412,7 @@
                         </ul>
                     </div>
 
-                      <div id = "smolyan" class="col-md-2 col-sm-6">
+                      <div id = "smolyan" class="col-md-2 col-sm-12">
                       <h3>Смолян</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%A0%D0%B5%D0%B3%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D0%B5%D0%BD_%D0%B8%D1%81%D1%82%D0%BE%D1%80%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8_%D0%BC%D1%83%D0%B7%D0%B5%D0%B9,_%D0%A1%D0%BC%D0%BE%D0%BB%D1%8F%D0%BD" class="mw-redirect"title="Регионален исторически музей, Смолян">Исторически музей</a></li>
@@ -431,7 +433,7 @@
                         </ul>
                     </div>
 
-                      <div id = "haskovo" class="col-md-2 col-sm-6">
+                      <div id = "haskovo" class="col-md-2 col-sm-12">
                       <h3>Хасково</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%9C%D0%BE%D0%BD%D1%83%D0%BC%D0%B5%D0%BD%D1%82_%E2%80%9E%D0%A1%D0%B2%D0%B5%D1%82%D0%B0_%D0%91%D0%BE%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B8%D1%86%D0%B0%E2%80%9C_(%D0%A5%D0%B0%D1%81%D0%BA%D0%BE%D0%B2%D0%BE)"title="Монумент „Света Богородица“ (Хасково)">Монумент „Света Богородица с Младенеца“</a></li>
@@ -446,7 +448,7 @@
                         </ul>
                     </div>
 
-                      <div id = "kardjali" class="col-md-2 col-sm-6">
+                      <div id = "kardjali" class="col-md-2 col-sm-12">
                       <h3>Кърджали</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%9A%D1%8A%D1%80%D0%B4%D0%B6%D0%B0%D0%BB%D0%B8%D0%B9%D1%81%D0%BA%D0%B8_%D0%BC%D0%B0%D0%BD%D0%B0%D1%81%D1%82%D0%B8%D1%80" title="Кърджалийски манастир">Манастирски комплекс „Св.Йоан Предтеча“</a></li>
@@ -468,7 +470,7 @@
                       </header>
                     <div class="objects">
 
-                      <div id = "sofia" class="col-md-2 col-sm-6">
+                      <div id = "sofia" class="col-md-2 col-sm-12">
                         <h3 id = "sofia">София</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%9D%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D0%B5%D0%BD_%D0%B8%D1%81%D1%82%D0%BE%D1%80%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8_%D0%BC%D1%83%D0%B7%D0%B5%D0%B9" title="Национален исторически музей">Национален исторически музей</a></li>
@@ -490,7 +492,7 @@
                         </ul>
                       </div>
 
-                      <div id = "sofiiska-oblast" class="col-md-2 col-sm-6">
+                      <div id = "sofiiska-oblast" class="col-md-2 col-sm-12">
                         <h3>Софийска област</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%98%D1%81%D1%82%D0%BE%D1%80%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8_%D0%BC%D1%83%D0%B7%D0%B5%D0%B9,_%D0%95%D1%82%D1%80%D0%BE%D0%BF%D0%BE%D0%BB%D0%B5" class="mw-redirect" title="Исторически музей, Етрополе">Исторически музей</a></li>
@@ -509,7 +511,7 @@
                         </ul>
                       </div>
 
-                      <div id = "pernik" class="col-md-2 col-sm-6">
+                      <div id = "pernik" class="col-md-2 col-sm-12">
                         <h3>Перник</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%A2%D1%80%D1%8A%D0%BD%D1%81%D0%BA%D0%BE_%D0%B6%D0%B4%D1%80%D0%B5%D0%BB%D0%BE" title="Трънско ждрело">Ждрелото на река Ерма</a></li>
@@ -517,7 +519,7 @@
                         </ul>
                       </div>
 
-                      <div id = "kystendil" class="col-md-2 col-sm-6">
+                      <div id = "kystendil" class="col-md-2 col-sm-12">
                         <h3>Кюстендил</h3>
                         <ul>
                             <li><a target="_blank" href="https://bg.wikipedia.org/wiki/%D0%9A%D1%8A%D1%89%D0%B0-%D0%BC%D1%83%D0%B7%D0%B5%D0%B9_%22%D0%94%D0%B8%D0%BC%D0%B8%D1%82%D1%8A%D1%80_%D0%9F%D0%B5%D1%88%D0%B5%D0%B2%22,_%D0%9A%D1%8E%D1%81%D1%82%D0%B5%D0%BD%D0%B4%D0%B8%D0%BB" title="Къща-музей &quot;Димитър Пешев&quot;, Кюстендил">Къща-музей „Димитър Пешев“</a></li>
@@ -532,7 +534,7 @@
                         </ul>
                       </div>
 
-                      <div id = "kystendil" class="col-md-2 col-sm-6">
+                      <div id = "blagoevgrad" class="col-md-2 col-sm-12">
                         <h3>Благоевград</h3>
                         <ul>
                             <li><a href="https://bg.wikipedia.org/wiki/%D0%9A%D1%8A%D1%89%D0%B0-%D0%BC%D1%83%D0%B7%D0%B5%D0%B9_%E2%80%9E%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0_%D0%92%D0%B0%D0%BF%D1%86%D0%B0%D1%80%D0%BE%D0%B2%E2%80%9C" title="Къща-музей „Никола Вапцаров“">Къща-музей „Никола Вапцаров“</a></li>
@@ -562,6 +564,32 @@
     </body>
 
     <footer>
+      <div>
+        <h3>Важна Информация</h3>
+        <ul>
+          <li><a href="#">Често Задавани Въпроси</a></li>
+          <li><a href="#">Визи и граничен контрол</li>
+          <li><a href="#">Комуникация</a></li>
+          <li><a href="#">Транспорт</a></li>
+          <li><a href="#">Здравеопазване</a></li>
+          <li><a href="#">Валутна информация</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <h3>Полезни връзки</h3>
+        <ul>
+          <li><a href="#">Министерство на туризма</a></li>
+          <li><a href="#">Посолства</a></li>
+          <li><a href="#">Времето</a></li>
+          <li><a href="#">Валутен курс</a></li>
+          <li><a href="#">Търговски представителства</a></li>
+        </ul>
+      </div>
+
+      <div class="logo">
+        <img src="assets/logo.png" alt="logo"/>
+      </div>
 
     </footer>
 
