final changes 98hio

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <li><a href="#sever">Северен централен район</a></li>
                         <li><a href="#sever-iztok">Североизточен район</a></li>
                         <li><a href="#iug-iztok">Югоизточен район</a></li>
-                        <li><a href="#iug">Южен централен район</a></li>
+                        <li><a href="#iug-centralen">Южен централен район</a></li>
                         <li><a href="#iug-zapad">Югозападен район</a></li>
 
                         <li role="separator" class="divider"></li>
@@ -55,7 +55,7 @@
                     </li>
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
-                    <li><a  href="">trello</a></li>
+                    <li><a  href="https://trello.com/b/hg3eyiI1/website-softuni">trello</a></li>
                     <li><a  href="https://github.com/Nahalius/stote">github</a></li>
                   </ul>
                 </div><!--/.nav-collapse -->
