fixing buttons links 89uio

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="container">
               <h1>100-те туристически обекта на България</h1>
               <p>Опознай чудесата на България!</p>
-              <p><a class="btn btn-success btn-lg" href="#" role="button">Научи повече</a></p>
+              <p><a class="btn btn-success btn-lg" href="#sever-zapad" role="button">Научи повече</a></p>
           </div>
         </div>
         </section>
@@ -87,7 +87,7 @@
               значение. Те включват най-забележителните природни феномени в страната, исторически местности, архитектурни резервати, храмове и
               манастири, най-високите планински върхове, даващи цялостна картина на богатото културно-историческо и приридно наследство по българските
               земи от дълбока древност до наши дни.</p>
-            <p><a class="btn btn-success btn-lg" href="#" role="button">Попълни Анкетата</a></p>
+            <p><a class="btn btn-success btn-lg" href="survey.html" role="button">Попълни Анкетата</a></p>
           </div>
         </section>
 
